add damage per detik

--- a/pages/css/gameplay.css
+++ b/pages/css/gameplay.css
@@ -1,6 +1,6 @@
 body {
     background-image: url("../../sources/images/background-gameplay.png");
-    background-repeat: no-repeat;
+
 }
 
 
@@ -15,13 +15,35 @@ body {
     width: 100%;
     height: 45%;
     background-color: rgb(47, 47, 47);
-    color: white;
     line-height: 50px;
+    overflow: auto;
 }
 
-.shopBox {
-    margin-top: 1rem;
-    height: 2rem;
-    width: 100%;
-    background-color: white;
+.shopBox {}
+
+.custom-image-size {
+    width: 5em;
 }
+
+.content-container-box {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+}
+
+.content-container-box:first-child {
+    grid-column: 1/2;
+    grid-row: 1/2
+}
+
+.content-container-box:nth-child(2) {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.content-container-box:nth-child(3) {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
+
+.content-container-box:last-child {}
