--- a/pages/css/gameplay.css
+++ b/pages/css/gameplay.css
@@ -19,31 +19,33 @@ body {
     overflow: auto;
 }
 
-.shopBox {}
+.shopBox {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto auto;
+    justify-content: space-between;
+}
 
 .custom-image-size {
     width: 5em;
 }
 
-.content-container-box {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto;
-}
-
 .content-container-box:first-child {
+    grid-row: 1/3;
     grid-column: 1/2;
-    grid-row: 1/2
 }
 
 .content-container-box:nth-child(2) {
-    grid-column: 2/3;
     grid-row: 1/2;
+    grid-column: 2/3;
 }
 
 .content-container-box:nth-child(3) {
-    grid-column: 2/3;
     grid-row: 2/3;
+    grid-column: 2/3;
 }
 
-.content-container-box:last-child {}
+.content-container-box:last-child {
+    grid-row: 1/3;
+    grid-column: 3/4;
+}
