--- a/pages/css/gameplay.css
+++ b/pages/css/gameplay.css
@@ -1,23 +1,33 @@
 body {
     background-image: url("../../sources/images/background-gameplay.png");
+    background-repeat: no-repeat;
 
 }
 
+.container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+}
 
 #monster {
     margin-top: 6rem;
 }
 
+#border-between-canvas {
+    height: 1rem;
+    width: 100%;
+    background-color: red;
+}
+
 #shopCanvas {
-    position: absolute;
-    bottom: 0;
-    right: 0;
     width: 100%;
     height: 45%;
     background-color: rgb(47, 47, 47);
     line-height: 50px;
     overflow: auto;
 }
+
+
 
 .shopBox {
     display: grid;
