--- a/pages/css/gameplay.css
+++ b/pages/css/gameplay.css
@@ -1,7 +1,13 @@
 body {
-    background-image: url("../../sources/images/background-gameplay.png");
-    background-repeat: no-repeat;
+    /*background-image: url("../../sources/images/background-gameplay.png");
+    background-repeat: no-repeat;*/
 
+}
+
+#layout {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .container-fluid {
@@ -9,31 +15,36 @@ body {
     padding-right: 0;
 }
 
+#gameplay {
+    width: 100%;
+    height: 500px;
+    background-color: grey;
+}
+
 #monster {
-    margin-top: 6rem;
+    bottom: 0;
+}
+
+#monster img {
+    width: 50%;
 }
 
 #border-between-canvas {
     height: 1rem;
     width: 100%;
-    background-color: red;
 }
 
 #shopCanvas {
     width: 100%;
-    height: 45%;
-    background-color: rgb(47, 47, 47);
-    line-height: 50px;
     overflow: auto;
 }
-
-
 
 .shopBox {
     display: grid;
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto;
     justify-content: space-between;
+    align-items: center;
 }
 
 .custom-image-size {
@@ -43,19 +54,27 @@ body {
 .content-container-box:first-child {
     grid-row: 1/3;
     grid-column: 1/2;
+    border: solid 2px black;
 }
 
 .content-container-box:nth-child(2) {
     grid-row: 1/2;
     grid-column: 2/3;
+    border: solid 2px black;
 }
 
 .content-container-box:nth-child(3) {
     grid-row: 2/3;
     grid-column: 2/3;
+    border: solid 2px black;
 }
 
 .content-container-box:last-child {
     grid-row: 1/3;
     grid-column: 3/4;
+    border: solid 2px black;
+}
+
+.custom-button-font {
+    font-size: 1em;
 }
