--- a/pages/css/gameplay.css
+++ b/pages/css/gameplay.css
@@ -36,6 +36,13 @@ body {
     text-align: center;
 }
 
+#sign {
+    margin: 3rem;
+    position: absolute;
+    -webkit-text-stroke: 1px black;
+    text-stroke: 1px black;
+}
+
 #monster {
     margin-top: 11rem;
     bottom: 0;
