--- a/pages/css/gameplay.css
+++ b/pages/css/gameplay.css
@@ -32,12 +32,11 @@ body {
     margin-right: 1rem;
 }
 
-#profile h6 {
-    text-align: center;
-}
 
 #sign {
-    margin: 3rem;
+    margin-top: 3rem;
+    left: 50%;
+    transform: translate(-50%, -50%);
     position: absolute;
     -webkit-text-stroke: 1px black;
     text-stroke: 1px black;
@@ -79,27 +78,39 @@ body {
 .content-container-box:first-child {
     grid-row: 1/3;
     grid-column: 1/2;
-    border: solid 2px black;
+
 }
 
 .content-container-box:nth-child(2) {
     grid-row: 1/2;
     grid-column: 2/3;
-    border: solid 2px black;
+
 }
 
 .content-container-box:nth-child(3) {
     grid-row: 2/3;
     grid-column: 2/3;
-    border: solid 2px black;
+
 }
 
 .content-container-box:last-child {
     grid-row: 1/3;
     grid-column: 3/4;
-    border: solid 2px black;
+
 }
 
 .custom-button-font {
     font-size: 1em
+}
+
+@media (min-width: 768px) {
+    body {
+        background-image: url("../../sources/images/background-desktop.png");
+
+    }
+
+
+    #monster img {
+        width: 40%;
+    }
 }
