--- a/pages/css/gameplay.css
+++ b/pages/css/gameplay.css
@@ -114,3 +114,14 @@ body {
         width: 40%;
     }
 }
+
+#popupExit{
+    position: absolute;
+    width: 0vw;
+    height: 0vw;
+    background-color: gainsboro;
+    overflow: hidden;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
