--- a/pages/css/gameplay.css
+++ b/pages/css/gameplay.css
@@ -71,6 +71,11 @@ body {
     align-items: center;
 }
 
+#gear {
+    width: 2rem;
+}
+
+
 #exit-button {
     display: flex;
     justify-content: space-around;
