--- a/pages/css/main-menu.css
+++ b/pages/css/main-menu.css
@@ -14,6 +14,10 @@ body {
     font-size: 5rem;
 }
 
+#gear {
+    width: 2rem;
+}
+
 @media only screen and (max-width: 768px) {
     .custom-title-font {
         font-size: 2rem;
@@ -38,7 +42,7 @@ body {
     font-size: 1.5rem;
 }
 
-.popup{
+.popup {
     overflow: auto;
     background-color: gainsboro;
     box-sizing: border-box;
@@ -47,12 +51,12 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     transition: 300ms;
     text-align: center;
     border-radius: 20px;
 }
 
-#inputName{
+#inputName {
     margin: auto;
 }
