tahap finishing, tinggal benerin mainmenu background

--- a/pages/css/main-menu.css
+++ b/pages/css/main-menu.css
@@ -1,21 +1,23 @@
 body {
-    background-image: url("../../sources/images/main-menu.png");
+    background-image: url("../../sources/images/mainmenu-mobile.png");
+}
+
+@media (min-width: 768px) {
+    body {
+        background-image: url("../../sources/images/mainmenu-desktop.png");
+    }
+}
+
+.foto-square {
+    width: 50%;
 }
 
 .main-menu-font-color {
     color: #f5f5f5;
 }
 
-.custom-title {
-    margin-top: 10rem;
-}
-
 .custom-title-font {
     font-size: 5rem;
-}
-
-#gear {
-    width: 2rem;
 }
 
 @media only screen and (max-width: 768px) {
@@ -35,7 +37,7 @@ body {
 }
 
 .custom-button-margin {
-    margin-top: 20rem;
+    margin-top: 15rem;
 }
 
 .custom-start-button-font {
